# hephaistos

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
examples/: CMakeLists.txt  README.md
examples/add/: CMakeLists.txt  add.cpp  add.h
examples/copy/: CMakeLists.txt  copy.cpp
examples/deviceinfo/: CMakeLists.txt  deviceinfo.cpp
examples/mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.h
examples/raytracing/: CMakeLists.txt  model_monkey.h  model_prism.h  model_sphere.h  raytracing.comp  raytracing.cpp  raytracing.h
examples/sampling/: CMakeLists.txt  sampling.cpp  sampling.h
include/hephaistos/: argument.hpp  atomic.hpp  bindings.hpp  buffer.hpp  command.hpp  compiler.hpp  config.hpp  context.hpp  debug.hpp  exception.hpp  handles.hpp  hephaistos.hpp  image.hpp  imageformat.hpp  program.hpp  raytracing.hpp  stopwatch.hpp  types.hpp  version.hpp
include/hephaistos/raytracing/: extension.hpp  pipeline.hpp  structure.hpp
notebooks/: debug.ipynb  getting_started.ipynb  mandelbrot.ipynb  rayquery.ipynb  raytracing.ipynb  sampling.ipynb
patches/: spirv-reflect.patch
python/: CMakeLists.txt  atomic.cpp  bindings.cpp  buffer.cpp  command.cpp  compiler.cpp  context.cpp  context.hpp  debug.cpp  exception.cpp  image.cpp  parameter.hpp  program.cpp  pyhephaistos.cpp  raytracing.cpp  stopwatch.cpp  types.cpp
python/hephaistos/: __init__.py  compiler.py  glsl.py  pipeline.py  pyhephaistos.pyi  queue.py  util.py
python/test/: test_glsl.py  test_pipeline.py  test_queue.py
python/test/shader/: pipeline_test.comp  pipeline_test.spv
src/: CMakeLists.txt  atomic.cpp  bindings.cpp  buffer.cpp  command.cpp  compiler.cpp  context.cpp  debug.cpp  exception.cpp  image.cpp  program.cpp  raytracing.cpp  stopwatch.cpp  types.cpp  version.cpp
src/raytracing/: extension.cpp  extension.hpp  pipeline.cpp  structure.cpp
src/vk/: instance.cpp  instance.hpp  reflection.cpp  reflection.hpp  result.hpp  types.cpp  types.hpp  util.hpp  vma.cpp
test/: CMakeLists.txt  atomic.cpp  buffer.cpp  command.cpp  compiler.cpp  context.cpp  debug.cpp  image.cpp  main.cpp  program.cpp  raytracing.cpp  validation.hpp
test/shader/: buffer_array.comp  buffer_array.h  deviceloss.comp  deviceloss.h  dispatchIndirect.comp  dispatchIndirect.h  image.comp  image.h  localsize.comp  localsize.h  push.comp  push.h  raytracing.comp  raytracing.h  sampler.comp  sampler.h  sbo.comp  sbo.h  spec.comp  spec.h  tlas.comp  tlas.h  ubo.comp  ubo.h
test/shader/raytracing/: callable.h  callable.rcall  hit.h  hit.rchit  miss.h  miss.rmiss  raygen.h  raygen.rgen  rayquery.comp  rayquery.h  tlas.comp  tlas.h
