[build-system]
requires = [
    "scikit-build-core ~= 0.10.7",
    "nanobind ~= 2.4.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "hephaistos"
version = "0.7.1"
description = "GPU computing framework using the Vulkan API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Kerscher Tobias", email = "88444139+tkerscher@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.18"
minimum-version = "0.6"
wheel.license-files = [
    "LICENSE",
    "external/glslang/LICENSE.txt",
    "external/reflect/LICENSE",
    "external/reflect/patch.LICENSE",
    "external/stb/LICENSE",
    "external/vma/LICENSE.txt",
    "external/volk/LICENSE.md",
    "external/vulkan/LICENSE.txt",
    "external/NOTICE"
]
wheel.packages = ["python/hephaistos"]
wheel.py-api = "cp312"
sdist.exclude = [".github", "examples", "notebooks", "test"]
